feat(menu) : add get addon menu endpoint
