# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\api\MenuAddonController;
 use App\Http\Controllers\api\MenuController;
 use App\Http\Controllers\api\MenuVariantController;
 use App\Http\Controllers\api\TagsController;
@@ -20,6 +21,7 @@ use Illuminate\Support\Facades\Route;
 Route::get('/restaurants/{restaurant}/menus', [MenuController::class, 'index']);
 Route::get('/restaurants/{restaurant}/tags', [TagsController::class, 'index']);
 Route::get('/restaurants/{restaurant}/menus/{menu}/variants', [MenuVariantController::class, 'index']);
+Route::get('/restaurants/{restaurant}/menus/{menu}/addons', [MenuAddonController::class, 'index']);
 
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
